added fixes